[gd_scene load_steps=2 format=3 uid="uid://csf6q162d5e8q"]

[ext_resource type="Script" path="res://scenes/game/player_console/scale_slider/scale_slider.gd" id="1_uunin"]

[node name="ScaleSlider" type="VSlider"]
min_value = -1.0
max_value = 1.0
step = 0.01
script = ExtResource("1_uunin")

[connection signal="drag_ended" from="." to="." method="_on_drag_ended"]
[connection signal="drag_started" from="." to="." method="_on_drag_started"]
